--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
+                    <li class="birthday"><i class="fas fa-calendar"></i>Jan 01, 1995</li>
                     <li class="email"><i class="fas fa-envelope"></i><a href="mailto: locnt1195@gmail.com">locnt1195@gmail.com</a></li>
                     <li class="phone"><i class="fas fa-phone"></i><a href="tel:0914582450">(+84) 914 582 450</a></li>
                     <!-- <li class="website"><i class="fas fa-globe"></i><a href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/orbit-free-resume-cv-bootstrap-theme-for-developers/" target="_blank">portfoliosite.com</a></li> -->
@@ -106,8 +107,21 @@
             <section class="section projects-section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-archive"></i></span>Projects</h2>
                 <div class="intro">
-                    <p>I have done many projects base on Odoo in version 7, 8, 9, 10, 11, 12. Here are some of big projects i have participate as full-time technical consultant. Build RESTfull API.</p>
+                    <p>I have done many projects base on Odoo in version 7, 8, 9, 10, 11, 12. Here are some of big projects i have participated as full-time technical consultant. Build RESTfull API.</p>
                 </div><!--//intro-->
+                <div class="item">
+                    <span class="project-title"><a href="#" target="_blank">Website Marketplace</a></span><br/>
+                    <span class="project-tagline">
+                        - This is a system for Farm and Agent to get in touch with each others. Whenever Farm want to hire Agent to work at the farm, they create Replacement Request then Agent will be picked for this replacement request. <br/>
+                        - Apart from Odoo backend view. I build a website interface following the UI and UX to familiar with user. Using Javascript, Jquery, Bootstrap to handle responsive website, send data to backend through API. <br/>
+                        - Features:
+                        <ul>
+                            <li> - Edit basic information of their profile.</li>
+                            <li> - See working shift, timesheet from the replacement request.</li>
+                            <li> - Use <a href="https://fullcalendar.io/#demos" target="_blank">Fullcalendar</a> to create, schedule Replacement Request(for Farm) and Leave Request(for Agent)</li>
+                            <li> - Use <a href="https://datatables.net/" target="_blank">Datatables</a> to mange list records.</li>
+                        </ul>
+                </div><!--//item-->
                 <div class="item">
                     <span class="project-title"><a href="#">English Center Management</a></span> <br/>
                     - <span class="project-tagline">
